[package]
name = "jeans"
readme = "README.md"
version = "0.1.4"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
edition = "2018"
repository = "https://github.com/cmccomb/jeans"
homepage = "https://github.com/cmccomb/jeans"
documentation = "http://docs.rs/jeans"
description = "Genetic algorithms"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "genetic", "heuristic", "stochastic"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
rand = "0.7.3"
benchfun = "*"
async-trait = "0.1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time"] }