[package]
name = "jeans"
readme = "README.md"
version = "0.1.5"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
edition = "2021"
repository = "https://github.com/cmccomb/jeans"
homepage = "https://github.com/cmccomb/jeans"
documentation = "http://docs.rs/jeans"
description = "Genetic algorithms"
license = "MIT OR Apache-2.0"
keywords = ["optimization", "genetic", "heuristic", "stochastic"]
categories = ["algorithms", "mathematics", "science"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
rand = "0.7.3"
benchfun = "*"
async-trait = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1.33", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
criterion = "0.5"

[[bench]]
name = "sphere"
harness = false

[[bench]]
name = "rastrigin"
harness = false

[[bench]]
name = "constrained"
harness = false

[[bench]]
name = "zdt1"
harness = false
